# llm-tokei

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  pages.yml  release.yml
data/: models.dev.csv  models.json  prices.json  prices.override.csv  providers.json
docs/: copilot-sessions.md  usage.md
examples/: fetch_prices.rs  gen-showcase.rs
npm/llm-tokei/: README.md  package.json
npm/llm-tokei-darwin-arm64/: package.json
npm/llm-tokei-linux-x64/: package.json
npm/llm-tokei-win32-x64/: package.json
npm/model-catalog/: README.md  package.json
npm/model-catalog/scripts/: build.mjs  models-dev-report.mjs
npm/model-catalog/src/: index.ts  models-dev-sources.ts  models.json
npm/model-catalog/src/models/: alibaba.json  anthropic.json  cohere.json  deepseek.json  google.json  meta.json  microsoft.json  minimax.json  mistral.json  moonshotai.json  openai.json  xai.json  zai.json
npm/model-catalog/test/: index.test.mjs  models-dev-report.test.mjs
npm/model-price-history/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
npm/model-price-history/scripts/: build.mjs
npm/model-price-history/src/: cli.ts  csv.ts  git.ts  history.ts  index.ts  models-dev.ts  types.ts  write.ts
npm/model-price-history/test/: fixture-repository.mjs  history.test.mjs  snapshots.test.mjs
npm/scripts/: prepare.mjs
npm/templates/: platform-package.json  root-package.json
schemas/: codex.d.ts  copilot-chat.d.ts
scripts/: extract-jsonl-schema.ts
site/: .gitignore  astro.config.ts  package.json  pnpm-lock.yaml
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro
src/: activity.rs  aggregate.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs  model_name.rs  output.rs  pricing.rs  text_count.rs  time.rs
src/activity/: mod.rs  plot.rs  series.rs  svg.rs  terminal.rs
src/format/: activity_common.rs  activity_svg.rs  activity_terminal.rs  json.rs  mod.rs  svg.rs  table.rs
src/providers/: mod.rs  opencode.rs
src/sources/: claude.rs  codex.rs  copilot.rs  copilot_cli.rs  copilot_shutdown.rs  dump.rs  mod.rs  opencode.rs  pi_agent.rs
tests/: cli.rs  integration.rs
tests/fixtures/claude/projects/-home-me-proj/: abc123.jsonl
tests/fixtures/copilot/workspaceStorage/abc123/: workspace.json
tests/fixtures/copilot_cli/session-state/session1/: events.jsonl
tests/fixtures/copilot_cli_dump/session-state/session1/: events.jsonl
tests/fixtures/copilot_cli_shutdown/session-state/session2/: events.jsonl
tests/fixtures/copilot_dump/workspaceStorage/ws/: workspace.json
tests/fixtures/copilot_exact/workspaceStorage/ws1/: workspace.json
(+8 files in other folders)
