[package]
name = "llm-tokei"
version = "0.1.0"
edition = "2021"
description = "Token usage stats CLI for Codex and OpenCode sessions"
license = "MIT"

[[bin]]
name = "llm-tokei"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"
glob = "0.3"
humantime = "2"
thiserror = "1"

[dev-dependencies]
ureq = { version = "2.10", features = ["json"] }
csv = "1"

[build-dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "fetch_prices"
path = "examples/fetch_prices.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
