[package]
name = "llm-tokei"
version = "0.1.5"
edition = "2021"
description = "Token usage stats CLI for Codex and OpenCode sessions"
license = "MIT"
repository = "https://github.com/clouds56-hello/llm-tokei"
homepage = "https://github.com/clouds56-hello/llm-tokei"
documentation = "https://github.com/clouds56-hello/llm-tokei#readme"
readme = "README.md"
keywords = ["llm", "tokens", "cli", "codex", "opencode"]
categories = ["command-line-utilities"]

[[bin]]
name = "llm-tokei"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
ureq = { version = "3.3", features = ["json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"
glob = "0.3"
humantime = "2"
terminal_size = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
csv = "1"

[build-dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "fetch_prices"
path = "examples/fetch_prices.rs"

[[example]]
name = "gen-showcase"
path = "examples/gen-showcase.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
